# knotcy

./: .gitignore  README.md  knotcy.py  pyproject.toml
func/: __init__.py  banner.py  folder_redact.py  messages.py  task_redact.py  view_redact.py
knotcy/: knotcy.py
knotcy/func/: __init__.py  banner.py  deletedb.py  folder_redact.py  messages.py  task_redact.py
