[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knotcy"
version = "0.1.0"
description = "A task manager to create, edit, and mark tasks as completed"

[project.scripts]
knotcy = "knotcy.knotcy:start_main" 

[tool.setuptools]
packages = ["knotcy", "knotcy.func"]
